--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -99,4 +99,12 @@
         android:layout_height="match_parent"
         app:srcCompat="@drawable/sample"
         />-->
+    <Button
+        android:id="@+id/button_relative"
+        android:layout_marginTop="20dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="start Relative layout"
+        />
 </LinearLayout>
