--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -107,4 +107,26 @@
         android:layout_gravity="center"
         android:text="start Relative layout"
         />
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/other_layout"
+        android:text="Other Layouts"
+        android:layout_gravity="center"
+        android:layout_marginTop="20dp"
+        />
 </LinearLayout>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
