--- a/app/src/main/res/layout/activity_other_layouts.xml
+++ b/app/src/main/res/layout/activity_other_layouts.xml
@@ -1,9 +1,129 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".Other_layouts">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <ImageView
+            android:layout_width="400dp"
+            android:layout_height="500dp"
+            android:src="@drawable/puppy"/>
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="sans-serif-black"
+            android:text="Puppy"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:textColor="#FDFDFD"
+            android:textSize="30sp"
+            android:textStyle="bold"
+            android:typeface="sans"
+            />
+        <TextView
+            android:id="@+id/textView1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="sans-serif-black"
+            android:text="Puppy"
+            android:layout_gravity="top"
+            android:gravity="center"
+            android:textColor="#FDFDFD"
+            android:textSize="30sp"
+            android:textStyle="bold"
+            android:typeface="sans"
+            />
+
+    </FrameLayout>
+    <ScrollView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        >
+
+        <AbsoluteLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+            <TextView
+                android:id="@+id/t3"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_x="300px"
+                android:layout_y="10px"
+                android:text="Hello Puppy"
+                android:textSize="20dp"
+                />
+        </AbsoluteLayout>
+        <TableLayout
+            android:layout_width="400dp"
+            android:layout_height="wrap_content"
+            >
+            <TableRow
+                android:background="@color/white">
+                <TextView
+                    android:id="@+id/head"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Result"
+                    android:gravity="center"
+                    android:layout_weight="2"
+                    android:textSize="20dp"
+                    />
+                <TextView
+                    android:id="@+id/head2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Result"
+                    android:gravity="center"
+                    android:layout_weight="1"
+                    android:textSize="20dp"
+                    />
+
+            </TableRow>
+            <TableRow android:background="@color/green">
+                <TextView
+                    android:id="@+id/sr1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="sr1"
+                    android:textSize="20dp"
+                    android:layout_weight="1"
+                    />
+                <TextView
+                    android:id="@+id/name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Name"
+                    android:textSize="20dp"
+                    android:layout_weight="2"
+
+                    />
+                <TextView
+                    android:id="@+id/score"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="score"
+                    android:textSize="20dp"
+                    android:layout_weight="2"
+                    />
+            </TableRow>
+
+        </TableLayout>
+
+        <ListView
+            android:id="@+id/list1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+        </ListView>
+    </ScrollView>
+
+</LinearLayout>
