--- a/app/src/main/res/layout/activity_other_layouts.xml
+++ b/app/src/main/res/layout/activity_other_layouts.xml
@@ -44,86 +44,100 @@
 
     </FrameLayout>
     <ScrollView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-
         >
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-        <AbsoluteLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-            <TextView
-                android:id="@+id/t3"
+            <AbsoluteLayout
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_x="300px"
-                android:layout_y="10px"
-                android:text="Hello Puppy"
-                android:textSize="20dp"
-                />
-        </AbsoluteLayout>
-        <TableLayout
-            android:layout_width="400dp"
-            android:layout_height="wrap_content"
-            >
-            <TableRow
-                android:background="@color/white">
+                android:layout_height="wrap_content">
                 <TextView
-                    android:id="@+id/head"
+                    android:id="@+id/t3"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Result"
-                    android:gravity="center"
-                    android:layout_weight="2"
+                    android:layout_height="match_parent"
+                    android:layout_x="300px"
+                    android:layout_y="10px"
+                    android:text="Hello Puppy"
                     android:textSize="20dp"
                     />
-                <TextView
-                    android:id="@+id/head2"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Result"
-                    android:gravity="center"
-                    android:layout_weight="1"
-                    android:textSize="20dp"
-                    />
+            </AbsoluteLayout>
+            <TableLayout
+                android:layout_width="400dp"
+                android:layout_height="wrap_content"
+                >
+                <TableRow
+                    android:background="@color/white">
+                    <TextView
+                        android:id="@+id/head"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Result"
+                        android:gravity="center"
+                        android:layout_weight="2"
+                        android:textSize="20dp"
+                        />
+                    <TextView
+                        android:id="@+id/head2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Result"
+                        android:gravity="center"
+                        android:layout_weight="1"
+                        android:textSize="20dp"
+                        />
 
-            </TableRow>
-            <TableRow android:background="@color/green">
-                <TextView
-                    android:id="@+id/sr1"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="sr1"
-                    android:textSize="20dp"
-                    android:layout_weight="1"
-                    />
-                <TextView
-                    android:id="@+id/name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Name"
-                    android:textSize="20dp"
-                    android:layout_weight="2"
+                </TableRow>
+                <TableRow android:background="@color/green">
+                    <TextView
+                        android:id="@+id/sr1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="sr1"
+                        android:textSize="20dp"
+                        android:layout_weight="1"
+                        />
+                    <TextView
+                        android:id="@+id/name"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Name"
+                        android:textSize="20dp"
+                        android:layout_weight="2"
 
-                    />
-                <TextView
-                    android:id="@+id/score"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="score"
-                    android:textSize="20dp"
-                    android:layout_weight="2"
-                    />
-            </TableRow>
+                        />
+                    <TextView
+                        android:id="@+id/score"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="score"
+                        android:textSize="20dp"
+                        android:layout_weight="2"
+                        />
+                </TableRow>
 
-        </TableLayout>
+            </TableLayout>
 
-        <ListView
-            android:id="@+id/list1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            <ListView
+                android:id="@+id/list1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
 
-        </ListView>
+            </ListView>
+            <GridView
+                android:id="@+id/grid1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                >
+
+            </GridView>
+        </LinearLayout>
+
+
+
     </ScrollView>
 
 </LinearLayout>
