--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -115,6 +115,12 @@
         android:layout_gravity="center"
         android:layout_marginTop="20dp"
         />
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/app"
+        android:text="navigate to appbar"/>
+
 </LinearLayout>
 
 
