--- a/app/src/main/res/layout/fragment_two.xml
+++ b/app/src/main/res/layout/fragment_two.xml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="10dp"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context=".fragmentTwo">
+
 
     <TextView
-        android:id="@+id/textView1"
+        android:id="@+id/textView2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="Hellooooooo Anushka!!!!"
+        android:text="Hellooooooo Chiditiii!!!!"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:layout_margin="10dp"
@@ -18,10 +20,9 @@
         android:textStyle="bold" />
 
     <ImageView
-        android:id="@+id/puppy"
+        android:id="@+id/wolf"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/puppy"
+        android:src="@drawable/wolf"
         android:layout_gravity="center"/>
-
 </LinearLayout>
