fragment two errors solved

--- a/app/src/main/res/layout/activity_app_bar_fragments.xml
+++ b/app/src/main/res/layout/activity_app_bar_fragments.xml
@@ -20,10 +20,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Fragment 1"
+        android:onClick="selectFragement"
         android:layout_gravity="center"
         android:id="@+id/Button1"/>
 
     <Button
+        android:onClick="selectFragement"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Fragment 2"
