--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -121,6 +121,13 @@
         android:id="@+id/app"
         android:text="navigate to appbar"/>
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/act_life_cycle"
+        android:text="Activity Lifecycle"/>
+
+
 </LinearLayout>
 
 
