intent with data(not visible)

--- a/app/src/main/res/layout/activity_greed.xml
+++ b/app/src/main/res/layout/activity_greed.xml
@@ -1,9 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:padding="2dp"
     tools:context=".greed">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+   <com.google.android.material.appbar.AppBarLayout
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content">
+
+   </com.google.android.material.appbar.AppBarLayout>
+   <TextView
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+      android:layout_gravity="center"
+       android:textSize="30dp"
+      android:text="Enter Personal Information"/>
+
+   <EditText
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+      android:hint="Enter name"
+       android:layout_margin="10dp"
+      android:id="@+id/name"/>
+
+   <EditText
+       android:layout_margin="10dp"
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:hint="Enter Age"
+       android:id="@+id/age"/>
+
+   <EditText
+       android:layout_margin="10dp"
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:hint="Enter Mobile Number"
+       android:id="@+id/mobile"/>
+
+   <EditText
+       android:layout_margin="10dp"
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:hint="Enter Roll Number"
+       android:id="@+id/roll"/>
+   <Button
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:id="@+id/send_data"
+       android:layout_gravity="center"
+       android:text="Send data"
+       />
+
+</LinearLayout>
