--- a/app/src/main/res/layout/activity_greed.xml
+++ b/app/src/main/res/layout/activity_greed.xml
@@ -20,6 +20,7 @@
        android:textSize="30dp"
       android:text="Enter Personal Information"/>
 
+
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
@@ -55,4 +56,11 @@
        android:text="Send data"
        />
 
+   <TextView
+       android:id="@+id/result"
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:layout_gravity="center"
+       android:textSize="30dp"
+       android:text="Enter Personal Information"/>
 </LinearLayout>
