--- a/app/src/main/res/layout/activity_media_audio.xml
+++ b/app/src/main/res/layout/activity_media_audio.xml
@@ -4,17 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".greed_intentData">
-<!--    <TextView-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:id="@+id/content1"-->
-<!--        android:textSize="20sp"-->
-<!--        android:text="Data1:"/>-->
-    <TextView
+    android:orientation="vertical"
+    android:gravity="center"
+    tools:context=".mediaAudio">
+
+    <Button
+        android:id="@+id/str_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/content"
-        android:textSize="30sp"
-        android:text="Data:"/>
+        android:text="Start Audio"/>
+
+    <Button
+        android:id="@+id/pause_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Pause Audio"/>
+
 </LinearLayout>
